--- a/src/template.html
+++ b/src/template.html
@@ -13,12 +13,12 @@
 
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body></body>
-
-  <!-- JQuery -------------------------------------- -->
-  <script
-    src="https://code.jquery.com/jquery-3.5.0.min.js"
-    integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
-    crossorigin="anonymous"
-  ></script>
+  <body>
+    <!-- JQuery -------------------------------------- -->
+    <script
+      src="https://code.jquery.com/jquery-3.5.0.min.js"
+      integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
